# steam

./: CMakeLists.txt  Main.qml  activateProduct.qml  biblioteka.qml  friendsWindow.qml  main.cpp  topBar.qml
